# AgenC

./: .cursorrules  .gitattributes  .gitignore  .mcp.json  .trivyignore  AGENTS.md  Anchor.toml  CLAUDE.md  CONCORDIA_TODO.MD  CONTRIBUTING.md  INTERVIEW_PREP.md  MIRRORS.md  Makefile  README.md  REFACTOR-MASTER-PROGRAM.md  REFACTOR-PROGRESS.md  REFACTOR-v5-PROPOSAL.md  REFACTOR.MD  REFACTOR.md  RISC_ZERO_MIGRATION_PLAN.md  RUST_MIGRATION_ROADMAP.md  SECURITY_AUDIT.md  SECURITY_AUDIT_ZK_PRIVACY.md  TODO.MD  WHITEPAPER.md  agenc-eval-test.cjs  ansi2png.py  autonomy_stage2.txt  build.sh  build_fixed.sh  cursor.md  image  img2  justfile  main.c  package.json  prompt.txt  run_focused_test.sh  run_tests.sh  run_tests_proper.sh  (+10 more)
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agenc-plugin-concordia/: README.md  package.json  tsconfig.json
audit/: BOUNTY_PROGRAM.md  INTERNAL_REVIEW.md  security-audit-2026-02-19.md
circuits/: README.md  demo.sh
concordia_bridge/: __init__.py  bridge_server_standalone.py  bridge_types.py  checkpoint.py  cli.py  control_server.py  demo.py  event_server.py  event_stream.py  instrumented_engine.py  instrumented_simultaneous_engine.py  observation_component.py  parent_death.py  proxy_entity.py  pyproject.toml  resilience.py  runner.py  simulation_identity.py
concordia_bridge/examples/: medieval_town.py  research_lab.py  trading_floor.py
concordia_bridge/tests/: test_checkpoint.py  test_control_server.py  test_event_server.py  test_instrumented_engine.py  test_observation_component.py  test_parent_death.py  test_proxy_entity.py  test_proxy_retry.py  test_resilience.py  test_runner.py  test_simultaneous_engine.py
containers/: docker-compose.yml
demo/: e2e_devnet_test.ts  private_task_demo.ts  styled_demo.ts
demo-app/: package.json
demos/: demo1.txt  demo2.txt  demo3.txt
desktop-icon/: README.md  install-icon.ps1  install-icon.sh  start-agenc.ps1
docs/: AGENC-LOCAL-DEV-RUNBOOK.md  AUTONOMY_USER_TEST_PROGRAM.md  CODEBASE_MAP.md  COMMANDS_AND_VALIDATION.md  CROSS_CHAIN_BRIDGE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLAN.md  DEVELOPER_GUIDE.md  DEVNET_VALIDATION.md  DOCS_INDEX.md  EVENTS_OBSERVABILITY.md  GAS_OPTIMIZATION.md  GETTING_STARTED.md  INCIDENT_REPLAY_RUNBOOK.md  INTEGRATION.md  ISSUES_959_999.md  ISSUES_ROADMAP.md  MAINNET_DEPLOYMENT.md  MARKETPLACE.md  PLUGIN_KIT.md  PRIVACY_README.md  PRIVATE_KERNEL_DISTRIBUTION.md  PRIVATE_KERNEL_SUPPORT_POLICY.md  PRIVATE_REGISTRY_SETUP.md  PROJECT_MANAGER_AGENT.md  PROOF_OF_FEDERATION.md  REPOSITORY_TOPOLOGY.md  ROADMAP.md  RUNTIME_API.md  RUNTIME_PIPELINE_DEBUG_BUNDLE.md  SDK.md  SECURITY_AUDIT_DEVNET.md  SECURITY_AUDIT_MAINNET.md  SMOKE_TESTS.md  TOKEN_HOLDER_UTILITY.md  UPGRADE_GUIDE.md  VERSION_DOCS_MAP.md  adapters.md  architecture.md  (+5 more)
docs-mcp/: README.md  package.json  tsup.config.ts
examples/: README.md  ex1.c  tsconfig.public-example.base.json
include/: agent_framework.h
logs/: 2026-03-12.md  2026-03-13.md  2026-03-14.md
mcp/: README.md  package.json  security-stack.mcp.json  tsup.config.ts
mcp/pmll-memory-mcp/: README.md  mcp_manifest.json  pyproject.toml
mcp/pmll-memory-mcp/pmll_memory_mcp/: __init__.py  kv_store.py  peek.py  q_promise_bridge.py  server.py
mcp/pmll-memory-mcp/tests/: __init__.py  test_kv_store.py  test_peek.py  test_q_promise.py
migrations/: README.md  migration_utils.ts  v1_to_v2.rs
mobile/: app.json  package.json
plugin-kit/: README.md  package.json
programs/agenc-coordination/: Cargo.toml  README.md
programs/agenc-coordination/fuzz/: Cargo.toml
programs/agenc-coordination/fuzz/fuzz_targets/: claim_task.rs  complete_task.rs  dependency_graph.rs  dispute_lifecycle.rs  dispute_timing.rs  mod.rs  resolve_dispute.rs  task_lifecycle.rs  vote_dispute.rs
programs/agenc-coordination/fuzz/src/: arbitrary.rs  invariants.rs  lib.rs  main.rs  scenarios.rs
programs/agenc-coordination/src/: errors.rs  events.rs  lib.rs  state.rs  verifying_key.rs
programs/agenc-coordination/src/instructions/: apply_dispute_slash.rs  apply_initiator_slash.rs  cancel_dispute.rs  cancel_proposal.rs  cancel_task.rs  claim_task.rs  complete_task.rs  complete_task_private.rs  completion_helpers.rs  constants.rs  create_dependent_task.rs  create_proposal.rs  create_task.rs  delegate_reputation.rs  deregister_agent.rs  dispute_helpers.rs  execute_proposal.rs  expire_claim.rs  expire_dispute.rs  initialize_governance.rs  initialize_protocol.rs  initiate_dispute.rs  lamport_transfer.rs  migrate.rs  mod.rs  post_to_feed.rs  purchase_skill.rs  rate_limit_helpers.rs  rate_skill.rs  register_agent.rs  register_skill.rs  resolve_dispute.rs  revoke_delegation.rs  slash_helpers.rs  stake_reputation.rs  suspend_agent.rs  task_init_helpers.rs  token_helpers.rs  unsuspend_agent.rs  update_agent.rs  (+11 more)
programs/agenc-coordination/src/instructions/bridge/: bridge_types.rs  emit_cross_chain_task.rs  mod.rs
programs/agenc-coordination/src/utils/: compute_budget.rs  mod.rs  multisig.rs  validation.rs  version.rs
runtime/: README.md  hello.c  package.json  tsconfig.json  vitest.config.ts
scripts/: agenc-autonomy-ladder.test.mjs  agenc-devnet-log-watch.mjs  agenc-devnet-soak-launch.sh  agenc-devnet-soak.mjs  agenc-localnet-soak-launch.sh  agenc-localnet-social-bootstrap.ts  agenc-localnet-social-launch.sh  agenc-localnet-social-smoke.ts  agenc-localnet-social-soak.mjs  agenc-trace-watch.mjs  agenc-watch-agent-stream.test.mjs  agenc-watch-app.test.mjs  agenc-watch-commands.test.mjs  agenc-watch-composer.test.mjs  agenc-watch-diff-render.test.mjs  agenc-watch-entry.test.mjs  agenc-watch-event-store.test.mjs  agenc-watch-file-links.test.mjs  agenc-watch-frame-snapshot.test.mjs  agenc-watch-frame.test.mjs  (+71 more)
sdk/: README.md  (+2 more)
zkvm/: Cargo.toml
zkvm/guest/src/: lib.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: config.rs  lib.rs  main.rs
zkvm/methods/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/patches/ark-relations/: Cargo.toml  Cargo.toml.orig  README.md
zkvm/patches/ark-relations/src/r1cs/: trace.rs
(+1430 files in other folders)
