[package]
name = "agenc-coordination"
version = "0.1.0"
description = "AgenC Decentralized Agent Coordination Protocol for Solana"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tetsuo-ai/AgenC"

[lib]
name = "agenc_coordination"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = "0.30.1"

# HARD PINS (required by Solana 1.18 toolchain)
borsh = "=1.3.1"
borsh-derive = "=1.3.1"
base64ct = "=1.6.0"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }