[package]
name = "agenc-coordination"
version = "0.1.0"
description = "AgenC Decentralized Agent Coordination Protocol for Solana"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tetsuo-ai/AgenC"

[lib]
name = "agenc_coordination"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", default-features = false, features = ["token"] }

# MSRV / toolchain compatibility pins (transitive dep pins)
base64ct = "=1.6.0"
toml_datetime = "=0.6.11"

# SBPF-safe RNG
getrandom = { version = "=0.2.12", default-features = false, features = ["custom"] }

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "=0.2.12", default-features = false, features = ["custom"] }

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk          = "=2.3.1"
tokio = { version = "1.0", features = ["full"] }
