[package]
name = "agenc-coordination"
version = "0.1.0"
description = "AgenC Decentralized Agent Coordination Protocol for Solana"
edition = "2021"
rust-version = "1.79"
license = "MIT"
repository = "https://github.com/tetsuo-ai/AgenC"

[lib]
name = "agenc_coordination"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", default-features = false, features = ["token", "token_2022", "associated_token"] }

# MSRV compatibility: Solana BPF toolchain uses rustc 1.79.0-dev
# indexmap 2.12.1+ requires rustc 1.82, so pin to last compatible version
indexmap = "=2.12.0"

# SBPF-safe RNG
getrandom = { version = "=0.2.12", default-features = false, features = ["custom"] }

# Groth16 proof verification (audited by OtterSec, Neodyme, Zellic)
groth16-solana = "0.2"

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "=0.2.12", default-features = false, features = ["custom"] }

[dev-dependencies]
solana-program-test = "=3.1.8"
solana-sdk          = "=4.0.0"
tokio = { version = "1.0", features = ["full"] }
